--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="homepage__content__title">
                 <strong>Bots Carvalima</strong>
             </h1>
-            <form class="homepage__content__container" action="/pages/home.html">
+            <form class="homepage__content__container" action="pages/home.html">
                 <input class="homepage__content__container__input" type="text" name="user" placeholder="Usuário">
                 <input class="homepage__content__container__input" type="password" name="password" placeholder="Senha">
                 <input class="homepage__content__container__input hover__button" type="submit" value="Login">
