--- a/pages/home.html
+++ b/pages/home.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <section class="section__header">
-            <a class="section__header__link" href="/pages/home.html">Home</a>
-            <a class="section__header__link" href="/pages/dashboard.html">Dashboard</a>
-            <a class="section__header__link" href="/pages/deploy.html">Deploy</a>
-            <a class="section__header__link" href="/pages/monitoring.html">Monitoring</a>
-            <a class="section__header__link" href="/pages/execution.html">Execution</a>
-            <a class="section__header__link sign__out" href="/index.html">Sign out</a>
+            <a class="section__header__link" href="./home.html">Home</a>
+            <a class="section__header__link" href="./dashboard.html">Dashboard</a>
+            <a class="section__header__link" href="./deploy.html">Deploy</a>
+            <a class="section__header__link" href="./monitoring.html">Monitoring</a>
+            <a class="section__header__link" href="./execution.html">Execution</a>
+            <a class="section__header__link sign__out" href="../index.html">Sign out</a>
         </section>
     </header>
     <main class="homepage">
