--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header></header>
     <main class="homepage">
         <section class="homepage__content">
-            <h1 class="homepage__content__title">
-                <strong>Bots Carvalima</strong>
-            </h1>
+            <div class="homepage__content__div__title">
+                <h1 class="homepage__content__title">
+                    <strong>BOTs Carvalima</strong>
+                </h1>
+            </div>
             <form class="homepage__content__container" action="pages/home.html">
                 <input class="homepage__content__container__input" type="text" name="user" placeholder="Usuário">
                 <input class="homepage__content__container__input" type="password" name="password" placeholder="Senha">
@@ -22,7 +24,7 @@
         </section>
     </main>
     <footer class="rodape">© 2024 cvltransportes</footer>    
-    <script src="script.js"></script>    
+    <script src="scripts/header.js"></script>    
 </body>
 
 </html>
