--- a/pages/execution.html
+++ b/pages/execution.html
@@ -24,19 +24,30 @@
         </div>
     </header>
     <main class="homepage">
+        <section class="execution_filter">
+            <select class="execution_filter_select" name="" id="select_department">
+                <option value="todos">Todos</option>
+                <option value="qualidade">Qualidade</option>
+                <option value="financeiro">Financeiro</option>
+                <option value="trafego">Trafego</option>
+                <option value="operacional">Operacional</option>
+            </select>
+            <input class="execution_filter_input" type="search" name="search_bot" id="search_bot">
+            <input class="execution_filter_input" type="submit" value="submit">
+        </section>
         <section class="execution_content">
             <div id="myModal" class="modal">
                 <span id="closeModal" class="close">&times;</span>
                 <div class="modal-content">
-                    <h2>Bot qualidade execution</h2>
+                    <h2 id="bot_name">Bot qualidade execution</h2>
                     <label for="modal-content-label-description">Description:</label>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis labore quis dolor ea praesentium quos, explicabo eveniet, provident in aliquid aspernatur tempora delectus odit officia maiores neque, hic quam? Eligendi?</p>
+                    <p id="bot_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis labore quis dolor ea praesentium quos, explicabo eveniet, provident in aliquid aspernatur tempora delectus odit officia maiores neque, hic quam? Eligendi?</p>
                     <label for="modal-content-label-department">Setor:</label>
-                    <p>Qualidade</p>
+                    <p id="bot_department">Qualidade</p>
                     <label for="modal-content-label-version">Versão:</label>
-                    <p>1.0.0</p>
+                    <p id="bot_version">1.0.0</p>
                     <label for="modal-content-label-user">Usuário:</label>
-                    <p>botcvl</p>
+                    <p id="bot_user">botcvl</p>
                     <div class="modal-content-buttons">
                         <button class="modal-content-button">Start</button>
                         <button class="modal-content-button">Finish</button>
@@ -45,15 +56,6 @@
                     </div>
                 </div>
             </div>
-
-            <div id="1" class="execution_content_container">Bot qualidade execution</div>
-            <div id="2" class="execution_content_container">Bot qualidade execution</div>
-            <div id="3" class="execution_content_container">Bot qualidade execution</div>
-            <div id="4" class="execution_content_container">Bot qualidade execution</div>
-            <div id="5" class="execution_content_container">Bot qualidade execution</div>
-            <div id="6" class="execution_content_container">Bot qualidade execution</div>
-            <div id="7" class="execution_content_container">Bot qualidade execution</div>
-            <div id="8" class="execution_content_container">Bot qualidade execution</div>
         </section>
     </main>
     <script src="../scripts/execution.js"></script>
