--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="homepage__content">
             <div class="homepage__content__div__title">
                 <h1 class="homepage__content__title">
-                    <strong>BOTs Carvalima</strong>
+                    <strong>DashBot</strong>
                 </h1>
             </div>
             <form class="homepage__content__container" action="pages/home.html">
