--- a/pages/monitoring.html
+++ b/pages/monitoring.html
@@ -15,12 +15,12 @@
             </h1>
         </section>
         <div id="modal_menu" class="header__modal__links" >
-            <a class="header__modal__link" href="./home.html">Home</a>
-            <a class="header__modal__link" href="./dashboard.html">Dashboard</a>
-            <a class="header__modal__link" href="./deploy.html">Deploy</a>
-            <a class="header__modal__link" href="./monitoring.html">Monitoring</a>
-            <a class="header__modal__link" href="./execution.html">Execution</a>
-            <a class="header__modal__link sign__out" href="../index.html">Sign out</a>
+            <a class="header__modal__link header_modal_link_container" href="./home.html"><img class="header__img__menu header_modal_link_container" src="../assets/botao-de-inicio.png" alt="" />Home</a>
+            <a class="header__modal__link" href="./dashboard.html"><img class="header__img__menu header_modal_link_container" src="../assets/analise.png" alt="" />Dashboard</a>
+            <a class="header__modal__link" href="./deploy.html"><img class="header__img__menu header_modal_link_container" src="../assets/foguete.png" alt="" />Deploy</a>
+            <a class="header__modal__link" href="./monitoring.html"><img class="header__img__menu header_modal_link_container" src="../assets/monitoramento.png" alt="" />Monitoring</a>
+            <a class="header__modal__link" href="./execution.html"><img class="header__img__menu header_modal_link_container" src="../assets/servico.png" alt="" />Execution</a>
+            <a class="header__modal__link sign__out" href="../index.html"><img class="header__img__menu header_modal_link_container" src="../assets/sair.png" alt="" />Sign out</a>
         </div>
     </header>
     <main class="homepage">
