--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashbot</title>
     <link rel="stylesheet" href="../styles/stylesheet.css">
 </head>
 <body>
@@ -28,6 +28,7 @@
         </section>
     </main>
     <footer class="rodape">© 2024 cvltransportes</footer>
+    <script src="../scripts/session.js"></script>
     <script src="../scripts/header.js"></script>      
 </body>
 </html>
