--- a/pages/monitoring.html
+++ b/pages/monitoring.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashbot</title>
     <link rel="stylesheet" href="../styles/stylesheet.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <section class="header__section">
             <img id="header_icon" class="header__img__list"  src="../assets/list.png" alt="">
             <h1 class="header__title">
-                <strong>Monitoring</strong>
+                <strong>Monitoramento</strong>
             </h1>
         </section>
         <div id="modal_menu" class="header__modal__links" >
@@ -28,6 +28,7 @@
         </section>
     </main>
     <footer class="rodape">© 2024 cvltransportes</footer>
+    <script src="../scripts/session.js"></script>
     <script src="../scripts/header.js"></script>         
 </body>
 </html>
