--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashbot</title>
     <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
@@ -15,16 +15,17 @@
                     <strong>DashBot</strong>
                 </h1>
             </div>
-            <form class="homepage__content__container" action="pages/home.html">
-                <input class="homepage__content__container__input" type="text" name="user" placeholder="Usuário">
-                <input class="homepage__content__container__input" type="password" name="password" placeholder="Senha">
+            <form id="signin-form" class="homepage__content__container">
+                <input class="homepage__content__container__input" type="text" id="username" placeholder="Usuário">
+                <input class="homepage__content__container__input" type="password" id="password" placeholder="Senha">
                 <input class="homepage__content__container__input hover__button" type="submit" value="Login">
             </form>
 
         </section>
     </main>
     <footer class="rodape">© 2024 cvltransportes</footer>    
-    <script src="scripts/header.js"></script>    
+    <script src="scripts/header.js"></script>
+    <script src="scripts/login.js"></script>     
 </body>
 
 </html>
