--- a/pages/execution.html
+++ b/pages/execution.html
@@ -52,7 +52,10 @@
                         <button class="execution-modal-content-button">Menu</button>
                     </div>
                     <div class="execution-modal-content-bots-status">
-                        <h3>Atividades Recentes</h3>
+                        <div id="status_header" class="execution-modal-content-bots-status-header">
+                            <h3>Atividades Recentes</h3>
+                        </div>
+                        
                         <div class="execution-modal-content-bots-status-table">
                         </div>
                     </div>
@@ -62,8 +65,8 @@
     </main>
     <script src="../scripts/session.js"></script>
     <script src="../scripts/loader.js"></script>
-    <script src="../scripts/execution_main.js"></script>
     <script src="../scripts/execution_fetches.js"></script>
+    <script src="../scripts/execution_main.js"></script>
     <footer class="rodape">© 2024 cvltransportes</footer>
     <script src="../scripts/header.js"></script>     
 </body>
