--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashbot</title>
     <link rel="stylesheet" href="../styles/stylesheet.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
@@ -25,6 +26,10 @@
     </header>
     <main class="homepage">
         <section class="execution_content">
+            <div class="dashboard-container">
+                <canvas id="barChart"></canvas>
+                <canvas id="lineChart"></canvas>
+            </div>
         </section>
     </main>
     <footer class="rodape">© 2024 cvltransportes</footer>
