--- a/pages/execution.html
+++ b/pages/execution.html
@@ -60,6 +60,8 @@
                         </div>
                         <div class="execution-modal-content-bots-status-table" id="table_status">
                         </div>
+                        <span class="execution-modal-content-bots-status-output" id="bot_output">
+                        </span>
                     </div>
                 </div>
             </div>
