--- a/pages/execution.html
+++ b/pages/execution.html
@@ -60,6 +60,9 @@
                         </div>
                         <div class="execution-modal-content-bots-status-table" id="table_status">
                         </div>
+                        <div id="output_header" class="execution-modal-content-bots-status-header">
+                            <h3>Saidas</h3>
+                        </div>
                         <span class="execution-modal-content-bots-status-output" id="bot_output">
                         </span>
                     </div>
