--- a/pages/monitoring.html
+++ b/pages/monitoring.html
@@ -24,11 +24,12 @@
         </div>
     </header>
     <main class="homepage">
-        <section class="execution_content">
+        <section class="monitoring_content">
         </section>
     </main>
     <footer class="rodape">© 2024 cvltransportes</footer>
     <script src="../scripts/session.js"></script>
-    <script src="../scripts/header.js"></script>         
+    <script src="../scripts/header.js"></script>
+    <script src="../scripts/monitoring/monitoring_fetches.js"></script>          
 </body>
 </html>
