--- a/pages/monitoring.html
+++ b/pages/monitoring.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashbot</title>
-    <link rel="stylesheet" href="../styles/stylesheet.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header>
         <section class="header__section">
             <img id="header_icon" class="header__img__list"  src="../assets/list.png" alt="">
             <h1 class="header__title">
-                <strong>Monitoramento</strong>
+                <strong>Monitor</strong>
             </h1>
         </section>
         <div id="modal_menu" class="header__modal__links" >
