--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
     <title>Dashbot</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header></header>
-    <main class="homepage">
-        <section class="homepage__content">
-            <div class="homepage__content__div__title">
-                <h1 class="homepage__content__title">
-                    <strong>DashBot</strong>
-                </h1>
-            </div>
-            <form id="signin-form" class="homepage__content__container">
-                <input class="homepage__content__container__input" type="text" id="username" placeholder="Usuário">
-                <input class="homepage__content__container__input" type="password" id="password" placeholder="Senha">
-                <input class="homepage__content__container__input hover__button" type="submit" value="Login">
+<body class="login_page">
+    <main class="login">
+        <section class="login__content">
+            <form id="signin-form" class="login__content__container">
+                <div class="login__content__div__title">
+                    <h1 class="login__content__title">
+                        <strong>DashBot</strong>
+                    </h1>
+                </div>
+                <input class="login__content__container__input" type="text" id="username" placeholder="Usuário">
+                <input class="login__content__container__input" type="password" id="password" placeholder="Senha">
+                <input class="login__content__container__input hover__button" type="submit" value="Login">
             </form>
 
         </section>
