--- a/pages/execution.html
+++ b/pages/execution.html
@@ -18,7 +18,7 @@
             <a class="header__modal__link" href="../index.html"><img class="header__img__menu header_modal_link_container" src="../assets/sair.png" alt="" />Sign out</a>
         </div>
     </header>
-    <main class="homepage">
+    <main class="main_section">
         <h1 class="header__title">
             <strong>Execução</strong>
         </h1>
