--- a/pages/monitoring.html
+++ b/pages/monitoring.html
@@ -7,13 +7,8 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
+    <div class="container">
     <header>
-        <section class="header__section">
-            <img id="header_icon" class="header__img__list"  src="../assets/list.png" alt="">
-            <h1 class="header__title">
-                <strong>Monitor</strong>
-            </h1>
-        </section>
         <div id="modal_menu" class="header__modal__links" >
             <a class="header__modal__link header_modal_link_container" href="./home.html"><img class="header__img__menu header_modal_link_container" src="../assets/botao-de-inicio.png" alt="" />Home</a>
             <a class="header__modal__link" href="./dashboard.html"><img class="header__img__menu header_modal_link_container" src="../assets/analise.png" alt="" />Dashboard</a>
@@ -23,10 +18,14 @@
             <a class="header__modal__link sign__out" href="../index.html"><img class="header__img__menu header_modal_link_container" src="../assets/sair.png" alt="" />Sign out</a>
         </div>
     </header>
-    <main class="homepage">
+    <main class="main_section">
+        <h1 class="header__title">
+            <strong>Monitor</strong>
+        </h1>
         <section class="monitoring_content">
         </section>
     </main>
+    </div>
     <footer class="rodape">© 2024 cvltransportes</footer>
     <script src="../scripts/session.js"></script>
     <script src="../scripts/header.js"></script>
