--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -11,6 +11,10 @@
     <div class="container">
     <header>
         <div id="modal_menu" class="header__modal__links" >
+            <div class="header_user">
+                <img class="header__img__avatar" src="../assets/avatar4.png" alt="" />
+                <h3 id="header_username"></h3>
+            </div>
             <a class="header__modal__link header_modal_link_container" href="./home.html"><img class="header__img__menu header_modal_link_container" src="../assets/botao-de-inicio.png" alt="" />Home</a>
             <a class="header__modal__link" href="./dashboard.html"><img class="header__img__menu header_modal_link_container" src="../assets/analise.png" alt="" />Dashboard</a>
             <a class="header__modal__link" href="./deploy.html"><img class="header__img__menu header_modal_link_container" src="../assets/foguete.png" alt="" />Deploy</a>
@@ -29,6 +33,7 @@
                 <canvas id="lineChart"></canvas>
             </div>
         </section>
+
     </main>
     </div>
     <footer class="rodape">© 2024 cvltransportes</footer>
