--- a/pages/monitoring.html
+++ b/pages/monitoring.html
@@ -10,6 +10,10 @@
     <div class="container">
     <header>
         <div id="modal_menu" class="header__modal__links" >
+            <div class="header_user">
+                <img class="header__img__avatar" src="../assets/avatar4.png" alt="" />
+                <h3 id="header_username"></h3>
+            </div>
             <a class="header__modal__link header_modal_link_container" href="./home.html"><img class="header__img__menu header_modal_link_container" src="../assets/botao-de-inicio.png" alt="" />Home</a>
             <a class="header__modal__link" href="./dashboard.html"><img class="header__img__menu header_modal_link_container" src="../assets/analise.png" alt="" />Dashboard</a>
             <a class="header__modal__link" href="./deploy.html"><img class="header__img__menu header_modal_link_container" src="../assets/foguete.png" alt="" />Deploy</a>
