--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <form id="signin-form" class="login__content__container">
                 <div class="login__content__div__title">
                     <h1 class="login__content__title">
+                        <img src="assets/robot.png" alt="">
                         <strong>DashBot</strong>
+                        <p>Carvalima</p>
                     </h1>
                 </div>
                 <input class="login__content__container__input" type="text" id="username" placeholder="Usuário">
