--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 
         </section>
     </main>
+    <div id="loading_login">
+        <div class="loader_login"></div>
+    </div>
     <footer class="rodape">© 2024 cvltransportes</footer>    
     <script src="scripts/header.js"></script>
+    <script src="scripts/loader.js"></script>
     <script src="scripts/login.js"></script>     
 </body>
 
